Léxico+Sintáctico/y.output
State 124 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: MAIN bloque

    2 bloque: INICIO_BLOQUE declar_de_variables_locales declar_de_subprogs sentencias FIN_BLOQUE

    3 declar_de_subprogs: declar_de_subprogs declar_subprog
    4                   | %empty

    5 declar_subprog: cabecera_subprog bloque

    6 declar_de_variables_locales: INI_DECLARACION variables_locales FIN_DECLARACION

    7 variables_locales: variables_locales cuerpo_declar_variables
    8                  | cuerpo_declar_variables
    9                  | error

   10 cuerpo_declar_variables: TIPO lista_variables PUN_COMA

   11 lista_variables: identificador
   12                | identificador SEPARADOR lista_variables

   13 cabecera_subprog: TIPO IDENTIFICADOR PAR_IZQ lista_parametros PAR_DER
   14                 | TIPO IDENTIFICADOR PAR_IZQ PAR_DER

   15 lista_parametros: lista_parametros SEPARADOR TIPO identificador
   16                 | TIPO identificador
   17                 | error

   18 sentencias: sentencias sentencia
   19           | sentencia
   20           | error

   21 sentencia: bloque
   22          | sentencia_asignacion
   23          | sentencia_si
   24          | sentencia_mientras
   25          | sentencia_entrada
   26          | sentencia_salida
   27          | sentencia_devolver
   28          | sentencia_hacer_hasta

   29 sentencia_asignacion: identificador ASIGNACION expresion

   30 sentencia_si: SI PAR_IZQ expresion PAR_DER sentencia
   31             | SI PAR_IZQ expresion PAR_DER sentencia SINO sentencia

   32 sentencia_mientras: MIENTRAS PAR_IZQ expresion PAR_DER sentencia

   33 sentencia_entrada: LEER lista_variables PUN_COMA

   34 sentencia_salida: OUT lista_exp_cad PUN_COMA

   35 lista_exp_cad: lista_expresiones SEPARADOR exp_cad
   36              | exp_cad

   37 exp_cad: expresion
   38        | CONST_STRING

   39 sentencia_devolver: DEVOLVER expresion PUN_COMA

   40 sentencia_hacer_hasta: HACER sentencia HASTA PAR_IZQ expresion PAR_DER PUN_COMA

   41 expresion: PAR_IZQ expresion PAR_DER
   42          | UNI_OP expresion
   43          | SIGNO_BIN_OP expresion
   44          | expresion OR_OP expresion
   45          | expresion AND_OP expresion
   46          | expresion XOR_OP expresion
   47          | expresion SIGNO_BIN_OP expresion
   48          | expresion MULTIDIV_OP expresion
   49          | expresion RELATIONAL_OP expresion
   50          | expresion EQNEQ_OP expresion
   51          | identificador
   52          | constante
   53          | llamar_funcion

   54 array: IDENTIFICADOR COR_IZQ expresion COR_DER
   55      | IDENTIFICADOR COR_IZQ expresion SEPARADOR expresion COR_DER

   56 lista_expresiones: lista_expresiones SEPARADOR expresion
   57                  | expresion

   58 llamar_funcion: IDENTIFICADOR PAR_IZQ lista_expresiones PAR_DER
   59               | IDENTIFICADOR PAR_IZQ PAR_DER

   60 constante_entera: CONST_INT

   61 constante_booleana: BOOLEANOS

   62 constante_real: CONST_FLOAT

   63 constante_caracter: CONST_CHAR

   64 identificador: IDENTIFICADOR
   65              | array

   66 constante: constante_entera
   67          | constante_booleana
   68          | constante_caracter
   69          | constante_real
   70          | constante_array

   71 constante_array: INICIO_BLOQUE lista_expresiones FIN_BLOQUE
   72                | INICIO_BLOQUE lista_expresiones PUN_COMA lista_expresiones FIN_BLOQUE


Terminals, with rules where they appear

$end (0) 0
error (256) 9 17 20
MAIN (258) 1
INICIO_BLOQUE (259) 2 71 72
FIN_BLOQUE (260) 2 71 72
PUN_COMA (261) 10 33 34 39 40 72
SEPARADOR (262) 12 15 35 55 56
PAR_IZQ (263) 13 14 30 31 32 40 41 58 59
PAR_DER (264) 13 14 30 31 32 40 41 58 59
INI_DECLARACION (265) 6
FIN_DECLARACION (266) 6
ASIGNACION (267) 29
COR_IZQ (268) 54 55
COR_DER (269) 54 55
SI (270) 30 31
SINO (271) 31
HACER (272) 40
HASTA (273) 40
MIENTRAS (274) 32
DEVOLVER (275) 39
TIPO (276) 10 13 14 15 16
LEER (277) 33
OUT (278) 34
BOOLEANOS (279) 61
CONST_INT (280) 60
CONST_FLOAT (281) 62
CONST_CHAR (282) 63
CONST_STRING (283) 38
IDENTIFICADOR (284) 13 14 54 55 58 59 64
OR_OP (285) 44
AND_OP (286) 45
XOR_OP (287) 46
EQNEQ_OP (288) 50
RELATIONAL_OP (289) 49
SIGNO_BIN_OP (290) 43 47
MULTIDIV_OP (291) 48
UNI_OP (292) 42


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
programa (39)
    on left: 1, on right: 0
bloque (40)
    on left: 2, on right: 1 5 21
declar_de_subprogs (41)
    on left: 3 4, on right: 2 3
declar_subprog (42)
    on left: 5, on right: 3
declar_de_variables_locales (43)
    on left: 6, on right: 2
variables_locales (44)
    on left: 7 8 9, on right: 6 7
cuerpo_declar_variables (45)
    on left: 10, on right: 7 8
lista_variables (46)
    on left: 11 12, on right: 10 12 33
cabecera_subprog (47)
    on left: 13 14, on right: 5
lista_parametros (48)
    on left: 15 16 17, on right: 13 15
sentencias (49)
    on left: 18 19 20, on right: 2 18
sentencia (50)
    on left: 21 22 23 24 25 26 27 28, on right: 18 19 30 31 32 40
sentencia_asignacion (51)
    on left: 29, on right: 22
sentencia_si (52)
    on left: 30 31, on right: 23
sentencia_mientras (53)
    on left: 32, on right: 24
sentencia_entrada (54)
    on left: 33, on right: 25
sentencia_salida (55)
    on left: 34, on right: 26
lista_exp_cad (56)
    on left: 35 36, on right: 34
exp_cad (57)
    on left: 37 38, on right: 35 36
sentencia_devolver (58)
    on left: 39, on right: 27
sentencia_hacer_hasta (59)
    on left: 40, on right: 28
expresion (60)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53, on right: 29 30
    31 32 37 39 40 41 42 43 44 45 46 47 48 49 50 54 55 56 57
array (61)
    on left: 54 55, on right: 65
lista_expresiones (62)
    on left: 56 57, on right: 35 56 58 71 72
llamar_funcion (63)
    on left: 58 59, on right: 53
constante_entera (64)
    on left: 60, on right: 66
constante_booleana (65)
    on left: 61, on right: 67
constante_real (66)
    on left: 62, on right: 69
constante_caracter (67)
    on left: 63, on right: 68
identificador (68)
    on left: 64 65, on right: 11 12 15 16 29 51
constante (69)
    on left: 66 67 68 69 70, on right: 52
constante_array (70)
    on left: 71 72, on right: 70


State 0

    0 $accept: . programa $end

    MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: MAIN . bloque

    INICIO_BLOQUE  shift, and go to state 3

    bloque  go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 bloque: INICIO_BLOQUE . declar_de_variables_locales declar_de_subprogs sentencias FIN_BLOQUE

    INI_DECLARACION  shift, and go to state 6

    declar_de_variables_locales  go to state 7


State 4

    1 programa: MAIN bloque .

    $default  reduce using rule 1 (programa)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    6 declar_de_variables_locales: INI_DECLARACION . variables_locales FIN_DECLARACION

    error  shift, and go to state 8
    TIPO   shift, and go to state 9

    variables_locales        go to state 10
    cuerpo_declar_variables  go to state 11


State 7

    2 bloque: INICIO_BLOQUE declar_de_variables_locales . declar_de_subprogs sentencias FIN_BLOQUE

    $default  reduce using rule 4 (declar_de_subprogs)

    declar_de_subprogs  go to state 12


State 8

    9 variables_locales: error .

    $default  reduce using rule 9 (variables_locales)


State 9

   10 cuerpo_declar_variables: TIPO . lista_variables PUN_COMA

    IDENTIFICADOR  shift, and go to state 13

    lista_variables  go to state 14
    array            go to state 15
    identificador    go to state 16


State 10

    6 declar_de_variables_locales: INI_DECLARACION variables_locales . FIN_DECLARACION
    7 variables_locales: variables_locales . cuerpo_declar_variables

    FIN_DECLARACION  shift, and go to state 17
    TIPO             shift, and go to state 9

    cuerpo_declar_variables  go to state 18


State 11

    8 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 8 (variables_locales)


State 12

    2 bloque: INICIO_BLOQUE declar_de_variables_locales declar_de_subprogs . sentencias FIN_BLOQUE
    3 declar_de_subprogs: declar_de_subprogs . declar_subprog

    error          shift, and go to state 19
    INICIO_BLOQUE  shift, and go to state 3
    SI             shift, and go to state 20
    HACER          shift, and go to state 21
    MIENTRAS       shift, and go to state 22
    DEVOLVER       shift, and go to state 23
    TIPO           shift, and go to state 24
    LEER           shift, and go to state 25
    OUT            shift, and go to state 26
    IDENTIFICADOR  shift, and go to state 13

    bloque                 go to state 27
    declar_subprog         go to state 28
    cabecera_subprog       go to state 29
    sentencias             go to state 30
    sentencia              go to state 31
    sentencia_asignacion   go to state 32
    sentencia_si           go to state 33
    sentencia_mientras     go to state 34
    sentencia_entrada      go to state 35
    sentencia_salida       go to state 36
    sentencia_devolver     go to state 37
    sentencia_hacer_hasta  go to state 38
    array                  go to state 15
    identificador          go to state 39


State 13

   54 array: IDENTIFICADOR . COR_IZQ expresion COR_DER
   55      | IDENTIFICADOR . COR_IZQ expresion SEPARADOR expresion COR_DER
   64 identificador: IDENTIFICADOR .

    COR_IZQ  shift, and go to state 40

    $default  reduce using rule 64 (identificador)


State 14

   10 cuerpo_declar_variables: TIPO lista_variables . PUN_COMA

    PUN_COMA  shift, and go to state 41


State 15

   65 identificador: array .

    $default  reduce using rule 65 (identificador)


State 16

   11 lista_variables: identificador .
   12                | identificador . SEPARADOR lista_variables

    SEPARADOR  shift, and go to state 42

    $default  reduce using rule 11 (lista_variables)


State 17

    6 declar_de_variables_locales: INI_DECLARACION variables_locales FIN_DECLARACION .

    $default  reduce using rule 6 (declar_de_variables_locales)


State 18

    7 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 7 (variables_locales)


State 19

   20 sentencias: error .

    $default  reduce using rule 20 (sentencias)


State 20

   30 sentencia_si: SI . PAR_IZQ expresion PAR_DER sentencia
   31             | SI . PAR_IZQ expresion PAR_DER sentencia SINO sentencia

    PAR_IZQ  shift, and go to state 43


State 21

   40 sentencia_hacer_hasta: HACER . sentencia HASTA PAR_IZQ expresion PAR_DER PUN_COMA

    INICIO_BLOQUE  shift, and go to state 3
    SI             shift, and go to state 20
    HACER          shift, and go to state 21
    MIENTRAS       shift, and go to state 22
    DEVOLVER       shift, and go to state 23
    LEER           shift, and go to state 25
    OUT            shift, and go to state 26
    IDENTIFICADOR  shift, and go to state 13

    bloque                 go to state 27
    sentencia              go to state 44
    sentencia_asignacion   go to state 32
    sentencia_si           go to state 33
    sentencia_mientras     go to state 34
    sentencia_entrada      go to state 35
    sentencia_salida       go to state 36
    sentencia_devolver     go to state 37
    sentencia_hacer_hasta  go to state 38
    array                  go to state 15
    identificador          go to state 39


State 22

   32 sentencia_mientras: MIENTRAS . PAR_IZQ expresion PAR_DER sentencia

    PAR_IZQ  shift, and go to state 45


State 23

   39 sentencia_devolver: DEVOLVER . expresion PUN_COMA

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 55
    array               go to state 15
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 24

   13 cabecera_subprog: TIPO . IDENTIFICADOR PAR_IZQ lista_parametros PAR_DER
   14                 | TIPO . IDENTIFICADOR PAR_IZQ PAR_DER

    IDENTIFICADOR  shift, and go to state 64


State 25

   33 sentencia_entrada: LEER . lista_variables PUN_COMA

    IDENTIFICADOR  shift, and go to state 13

    lista_variables  go to state 65
    array            go to state 15
    identificador    go to state 16


State 26

   34 sentencia_salida: OUT . lista_exp_cad PUN_COMA

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    CONST_STRING   shift, and go to state 66
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    lista_exp_cad       go to state 67
    exp_cad             go to state 68
    expresion           go to state 69
    array               go to state 15
    lista_expresiones   go to state 70
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 27

   21 sentencia: bloque .

    $default  reduce using rule 21 (sentencia)


State 28

    3 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 3 (declar_de_subprogs)


State 29

    5 declar_subprog: cabecera_subprog . bloque

    INICIO_BLOQUE  shift, and go to state 3

    bloque  go to state 71


State 30

    2 bloque: INICIO_BLOQUE declar_de_variables_locales declar_de_subprogs sentencias . FIN_BLOQUE
   18 sentencias: sentencias . sentencia

    INICIO_BLOQUE  shift, and go to state 3
    FIN_BLOQUE     shift, and go to state 72
    SI             shift, and go to state 20
    HACER          shift, and go to state 21
    MIENTRAS       shift, and go to state 22
    DEVOLVER       shift, and go to state 23
    LEER           shift, and go to state 25
    OUT            shift, and go to state 26
    IDENTIFICADOR  shift, and go to state 13

    bloque                 go to state 27
    sentencia              go to state 73
    sentencia_asignacion   go to state 32
    sentencia_si           go to state 33
    sentencia_mientras     go to state 34
    sentencia_entrada      go to state 35
    sentencia_salida       go to state 36
    sentencia_devolver     go to state 37
    sentencia_hacer_hasta  go to state 38
    array                  go to state 15
    identificador          go to state 39


State 31

   19 sentencias: sentencia .

    $default  reduce using rule 19 (sentencias)


State 32

   22 sentencia: sentencia_asignacion .

    $default  reduce using rule 22 (sentencia)


State 33

   23 sentencia: sentencia_si .

    $default  reduce using rule 23 (sentencia)


State 34

   24 sentencia: sentencia_mientras .

    $default  reduce using rule 24 (sentencia)


State 35

   25 sentencia: sentencia_entrada .

    $default  reduce using rule 25 (sentencia)


State 36

   26 sentencia: sentencia_salida .

    $default  reduce using rule 26 (sentencia)


State 37

   27 sentencia: sentencia_devolver .

    $default  reduce using rule 27 (sentencia)


State 38

   28 sentencia: sentencia_hacer_hasta .

    $default  reduce using rule 28 (sentencia)


State 39

   29 sentencia_asignacion: identificador . ASIGNACION expresion

    ASIGNACION  shift, and go to state 74


State 40

   54 array: IDENTIFICADOR COR_IZQ . expresion COR_DER
   55      | IDENTIFICADOR COR_IZQ . expresion SEPARADOR expresion COR_DER

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 75
    array               go to state 15
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 41

   10 cuerpo_declar_variables: TIPO lista_variables PUN_COMA .

    $default  reduce using rule 10 (cuerpo_declar_variables)


State 42

   12 lista_variables: identificador SEPARADOR . lista_variables

    IDENTIFICADOR  shift, and go to state 13

    lista_variables  go to state 76
    array            go to state 15
    identificador    go to state 16


State 43

   30 sentencia_si: SI PAR_IZQ . expresion PAR_DER sentencia
   31             | SI PAR_IZQ . expresion PAR_DER sentencia SINO sentencia

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 77
    array               go to state 15
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 44

   40 sentencia_hacer_hasta: HACER sentencia . HASTA PAR_IZQ expresion PAR_DER PUN_COMA

    HASTA  shift, and go to state 78


State 45

   32 sentencia_mientras: MIENTRAS PAR_IZQ . expresion PAR_DER sentencia

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 79
    array               go to state 15
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 46

   71 constante_array: INICIO_BLOQUE . lista_expresiones FIN_BLOQUE
   72                | INICIO_BLOQUE . lista_expresiones PUN_COMA lista_expresiones FIN_BLOQUE

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 80
    array               go to state 15
    lista_expresiones   go to state 81
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 47

   41 expresion: PAR_IZQ . expresion PAR_DER

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 82
    array               go to state 15
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 48

   61 constante_booleana: BOOLEANOS .

    $default  reduce using rule 61 (constante_booleana)


State 49

   60 constante_entera: CONST_INT .

    $default  reduce using rule 60 (constante_entera)


State 50

   62 constante_real: CONST_FLOAT .

    $default  reduce using rule 62 (constante_real)


State 51

   63 constante_caracter: CONST_CHAR .

    $default  reduce using rule 63 (constante_caracter)


State 52

   54 array: IDENTIFICADOR . COR_IZQ expresion COR_DER
   55      | IDENTIFICADOR . COR_IZQ expresion SEPARADOR expresion COR_DER
   58 llamar_funcion: IDENTIFICADOR . PAR_IZQ lista_expresiones PAR_DER
   59               | IDENTIFICADOR . PAR_IZQ PAR_DER
   64 identificador: IDENTIFICADOR .

    PAR_IZQ  shift, and go to state 83
    COR_IZQ  shift, and go to state 40

    $default  reduce using rule 64 (identificador)


State 53

   43 expresion: SIGNO_BIN_OP . expresion

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 84
    array               go to state 15
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 54

   42 expresion: UNI_OP . expresion

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 85
    array               go to state 15
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 55

   39 sentencia_devolver: DEVOLVER expresion . PUN_COMA
   44 expresion: expresion . OR_OP expresion
   45          | expresion . AND_OP expresion
   46          | expresion . XOR_OP expresion
   47          | expresion . SIGNO_BIN_OP expresion
   48          | expresion . MULTIDIV_OP expresion
   49          | expresion . RELATIONAL_OP expresion
   50          | expresion . EQNEQ_OP expresion

    PUN_COMA       shift, and go to state 86
    OR_OP          shift, and go to state 87
    AND_OP         shift, and go to state 88
    XOR_OP         shift, and go to state 89
    EQNEQ_OP       shift, and go to state 90
    RELATIONAL_OP  shift, and go to state 91
    SIGNO_BIN_OP   shift, and go to state 92
    MULTIDIV_OP    shift, and go to state 93


State 56

   53 expresion: llamar_funcion .

    $default  reduce using rule 53 (expresion)


State 57

   66 constante: constante_entera .

    $default  reduce using rule 66 (constante)


State 58

   67 constante: constante_booleana .

    $default  reduce using rule 67 (constante)


State 59

   69 constante: constante_real .

    $default  reduce using rule 69 (constante)


State 60

   68 constante: constante_caracter .

    $default  reduce using rule 68 (constante)


State 61

   51 expresion: identificador .

    $default  reduce using rule 51 (expresion)


State 62

   52 expresion: constante .

    $default  reduce using rule 52 (expresion)


State 63

   70 constante: constante_array .

    $default  reduce using rule 70 (constante)


State 64

   13 cabecera_subprog: TIPO IDENTIFICADOR . PAR_IZQ lista_parametros PAR_DER
   14                 | TIPO IDENTIFICADOR . PAR_IZQ PAR_DER

    PAR_IZQ  shift, and go to state 94


State 65

   33 sentencia_entrada: LEER lista_variables . PUN_COMA

    PUN_COMA  shift, and go to state 95


State 66

   38 exp_cad: CONST_STRING .

    $default  reduce using rule 38 (exp_cad)


State 67

   34 sentencia_salida: OUT lista_exp_cad . PUN_COMA

    PUN_COMA  shift, and go to state 96


State 68

   36 lista_exp_cad: exp_cad .

    $default  reduce using rule 36 (lista_exp_cad)


State 69

   37 exp_cad: expresion .
   44 expresion: expresion . OR_OP expresion
   45          | expresion . AND_OP expresion
   46          | expresion . XOR_OP expresion
   47          | expresion . SIGNO_BIN_OP expresion
   48          | expresion . MULTIDIV_OP expresion
   49          | expresion . RELATIONAL_OP expresion
   50          | expresion . EQNEQ_OP expresion
   57 lista_expresiones: expresion .

    OR_OP          shift, and go to state 87
    AND_OP         shift, and go to state 88
    XOR_OP         shift, and go to state 89
    EQNEQ_OP       shift, and go to state 90
    RELATIONAL_OP  shift, and go to state 91
    SIGNO_BIN_OP   shift, and go to state 92
    MULTIDIV_OP    shift, and go to state 93

    SEPARADOR  reduce using rule 57 (lista_expresiones)
    $default   reduce using rule 37 (exp_cad)


State 70

   35 lista_exp_cad: lista_expresiones . SEPARADOR exp_cad
   56 lista_expresiones: lista_expresiones . SEPARADOR expresion

    SEPARADOR  shift, and go to state 97


State 71

    5 declar_subprog: cabecera_subprog bloque .

    $default  reduce using rule 5 (declar_subprog)


State 72

    2 bloque: INICIO_BLOQUE declar_de_variables_locales declar_de_subprogs sentencias FIN_BLOQUE .

    $default  reduce using rule 2 (bloque)


State 73

   18 sentencias: sentencias sentencia .

    $default  reduce using rule 18 (sentencias)


State 74

   29 sentencia_asignacion: identificador ASIGNACION . expresion

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 98
    array               go to state 15
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 75

   44 expresion: expresion . OR_OP expresion
   45          | expresion . AND_OP expresion
   46          | expresion . XOR_OP expresion
   47          | expresion . SIGNO_BIN_OP expresion
   48          | expresion . MULTIDIV_OP expresion
   49          | expresion . RELATIONAL_OP expresion
   50          | expresion . EQNEQ_OP expresion
   54 array: IDENTIFICADOR COR_IZQ expresion . COR_DER
   55      | IDENTIFICADOR COR_IZQ expresion . SEPARADOR expresion COR_DER

    SEPARADOR      shift, and go to state 99
    COR_DER        shift, and go to state 100
    OR_OP          shift, and go to state 87
    AND_OP         shift, and go to state 88
    XOR_OP         shift, and go to state 89
    EQNEQ_OP       shift, and go to state 90
    RELATIONAL_OP  shift, and go to state 91
    SIGNO_BIN_OP   shift, and go to state 92
    MULTIDIV_OP    shift, and go to state 93


State 76

   12 lista_variables: identificador SEPARADOR lista_variables .

    $default  reduce using rule 12 (lista_variables)


State 77

   30 sentencia_si: SI PAR_IZQ expresion . PAR_DER sentencia
   31             | SI PAR_IZQ expresion . PAR_DER sentencia SINO sentencia
   44 expresion: expresion . OR_OP expresion
   45          | expresion . AND_OP expresion
   46          | expresion . XOR_OP expresion
   47          | expresion . SIGNO_BIN_OP expresion
   48          | expresion . MULTIDIV_OP expresion
   49          | expresion . RELATIONAL_OP expresion
   50          | expresion . EQNEQ_OP expresion

    PAR_DER        shift, and go to state 101
    OR_OP          shift, and go to state 87
    AND_OP         shift, and go to state 88
    XOR_OP         shift, and go to state 89
    EQNEQ_OP       shift, and go to state 90
    RELATIONAL_OP  shift, and go to state 91
    SIGNO_BIN_OP   shift, and go to state 92
    MULTIDIV_OP    shift, and go to state 93


State 78

   40 sentencia_hacer_hasta: HACER sentencia HASTA . PAR_IZQ expresion PAR_DER PUN_COMA

    PAR_IZQ  shift, and go to state 102


State 79

   32 sentencia_mientras: MIENTRAS PAR_IZQ expresion . PAR_DER sentencia
   44 expresion: expresion . OR_OP expresion
   45          | expresion . AND_OP expresion
   46          | expresion . XOR_OP expresion
   47          | expresion . SIGNO_BIN_OP expresion
   48          | expresion . MULTIDIV_OP expresion
   49          | expresion . RELATIONAL_OP expresion
   50          | expresion . EQNEQ_OP expresion

    PAR_DER        shift, and go to state 103
    OR_OP          shift, and go to state 87
    AND_OP         shift, and go to state 88
    XOR_OP         shift, and go to state 89
    EQNEQ_OP       shift, and go to state 90
    RELATIONAL_OP  shift, and go to state 91
    SIGNO_BIN_OP   shift, and go to state 92
    MULTIDIV_OP    shift, and go to state 93


State 80

   44 expresion: expresion . OR_OP expresion
   45          | expresion . AND_OP expresion
   46          | expresion . XOR_OP expresion
   47          | expresion . SIGNO_BIN_OP expresion
   48          | expresion . MULTIDIV_OP expresion
   49          | expresion . RELATIONAL_OP expresion
   50          | expresion . EQNEQ_OP expresion
   57 lista_expresiones: expresion .

    OR_OP          shift, and go to state 87
    AND_OP         shift, and go to state 88
    XOR_OP         shift, and go to state 89
    EQNEQ_OP       shift, and go to state 90
    RELATIONAL_OP  shift, and go to state 91
    SIGNO_BIN_OP   shift, and go to state 92
    MULTIDIV_OP    shift, and go to state 93

    $default  reduce using rule 57 (lista_expresiones)


State 81

   56 lista_expresiones: lista_expresiones . SEPARADOR expresion
   71 constante_array: INICIO_BLOQUE lista_expresiones . FIN_BLOQUE
   72                | INICIO_BLOQUE lista_expresiones . PUN_COMA lista_expresiones FIN_BLOQUE

    FIN_BLOQUE  shift, and go to state 104
    PUN_COMA    shift, and go to state 105
    SEPARADOR   shift, and go to state 106


State 82

   41 expresion: PAR_IZQ expresion . PAR_DER
   44          | expresion . OR_OP expresion
   45          | expresion . AND_OP expresion
   46          | expresion . XOR_OP expresion
   47          | expresion . SIGNO_BIN_OP expresion
   48          | expresion . MULTIDIV_OP expresion
   49          | expresion . RELATIONAL_OP expresion
   50          | expresion . EQNEQ_OP expresion

    PAR_DER        shift, and go to state 107
    OR_OP          shift, and go to state 87
    AND_OP         shift, and go to state 88
    XOR_OP         shift, and go to state 89
    EQNEQ_OP       shift, and go to state 90
    RELATIONAL_OP  shift, and go to state 91
    SIGNO_BIN_OP   shift, and go to state 92
    MULTIDIV_OP    shift, and go to state 93


State 83

   58 llamar_funcion: IDENTIFICADOR PAR_IZQ . lista_expresiones PAR_DER
   59               | IDENTIFICADOR PAR_IZQ . PAR_DER

    INICIO_BLOQUE  shift, and go to state 46
    PAR_IZQ        shift, and go to state 47
    PAR_DER        shift, and go to state 108
    BOOLEANOS      shift, and go to state 48
    CONST_INT      shift, and go to state 49
    CONST_FLOAT    shift, and go to state 50
    CONST_CHAR     shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 52
    SIGNO_BIN_OP   shift, and go to state 53
    UNI_OP         shift, and go to state 54

    expresion           go to state 80
    array               go to state 15
    lista_expresiones   go to state 109
    llamar_funcion      go to state 56
    constante_entera    go to state 57
    constante_booleana  go to state 58
    constante_real      go to state 59
    constante_caracter  go to state 60
    identificador       go to state 61
    constante           go to state 62
    constante_array     go to state 63


State 84

   43 expresion: SIGNO_BIN_OP expresion .
   44          | expresion . OR_OP expresion
   45          | expresion . AND_OP expresion
   46          | expresion . XOR_OP expresion
   47          | expresion . SIGNO_BIN_OP expresion
   48          | expresion . MULTIDIV_OP expresion
   49          | expresion . RELATIONAL_OP expresion
   50          | expresion . EQNEQ_OP expresion

    $default  reduce using rule 43 (expresion)


State 85
